Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-portal
  namespace: hr-portal
spec:
  type: ClusterIP
  selector:
    app: hr-portal
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
